# ror-rag

./: .gitignore  embeddings.ipynb  embeddings.v2.ipynb  hello.py  pyproject.toml
db/: ror.db  ror.db.wal
